--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/intro-bg.png)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -96,29 +96,33 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profile.png" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Moses Asiago</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>mozzeago@gmail.com</span></p>
+                        <p><span class="title-s">Email: </span> <span>mozzeago(at)gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(+254) 703-107-408</span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
+					<span>Java Android</span> <span class="pull-right">75%</span>
+					 <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <span>PHP-LARAVEL</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>HTML & CSS3</span> <span class="pull-right">75%</span>
+                    <span>HTML & CSS3</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python-Django-Flask</span> <span class="pull-right">50%</span>
+                    <span>Python-Django-Flask</span> <span class="pull-right">60%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -136,20 +140,31 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      Moses Asiago is a FullStack Developer focusing in Java android and RESTful APIs, with 4+ years of experience building web applications using LARAVEL and JS. 
+					  He has also worked in several full-stack projects using PHP and Python, leveraging tools such as Laravel and Django to deliver quality products.
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      My current goals are to continue providing a high-quality software development service and participate in product management. 
+					  I have good analytical and problem-solving abilities with great attention to details and overall product quality. 
+					  I can help your general development the right way through to software architecture.
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                     <b>Tools:</b> Retrofit,Room,Picasso, Glide, Android architecture components
+					 </br>
+					<b>Local storages:</b> SQLite
+					 </br>
+					<b>Frameworks:</b> Android,Firebase, Facebook, Twitter, AdMob, Google Maps
+					 </br>
+                    <b>Architecture:</b> Clean, MVVM, SOLID, DRY
+					 </br>
+					<b>Environments:</b> Android Studio, JIRA, Trello, Git, Jenkins
+					 </br>
+					<b>Methodologies:</b> Agile, Scrum, Kanban
+					</br>
+					<b>Other Skill sets:</b></br> - PHP Custom website creation</br> - Wordpress Website Fixing</br> - WordPress Theme Creation from PSD</br>
+- Wordpress Theme Creation from HTML/CSS</br>
+- WordPress Pre-Made/Premium Theme Customization</br>
+- E-Commerce
                     </p>
                   </div>
                 </div>
@@ -183,37 +198,7 @@
                 <span class="ico-circle"><i class="ion-monitor"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="ion-code-working"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="ion-camera"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Photography</h2>
+                <h2 class="s-title">Web App Dev.</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -228,7 +213,7 @@
                 <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
+                <h2 class="s-title">Java Android and Kotlin </h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -240,25 +225,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+                <span class="ico-circle"><i class="ion-code-working"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="ion-stats-bars"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
+                <h2 class="s-title">Remote Systems Support</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -282,7 +252,7 @@
                 <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">3</p>
+                <p class="counter">3+</p>
                 <span class="counter-text">SYSTEMS COMPLETED</span>
               </div>
             </div>
@@ -293,7 +263,7 @@
                 <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">5+</p>
+                <p class="counter">4+</p>
                 <span class="counter-text">YEARS OF EXPERIENCE</span>
               </div>
             </div>
@@ -304,19 +274,8 @@
                 <span class="ico-circle"><i class="ion-ios-people"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">5</p>
+                <p class="counter">4+</p>
                 <span class="counter-text">COMPANY CLIENTS</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
-              </div>
-              <div class="counter-num">
-                <p class="counter">36</p>
-                <span class="counter-text">AWARD WON</span>
               </div>
             </div>
           </div>
@@ -497,6 +456,7 @@
         <div class="row">
           <div class="col-md-12">
             <div id="testimonial-mf" class="owl-carousel owl-theme">
+			<!--
               <div class="testimonial-box">
                 <div class="author-test">
                   <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
@@ -510,15 +470,15 @@
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                 </div>
               </div>
+			-->
               <div class="testimonial-box">
                 <div class="author-test">
                   <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                  <span class="author">Marta Socrate</span>
+                  <span class="author">Elmar Stroomer CEO Africa Collect Textiles</span>
                 </div>
                 <div class="content-test">
                   <p class="description lead">
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.
+                    "I hired Asiago to do our company website and he did a quite good job. And not only that but also the communication and response time was very smooth and easy. "
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                 </div>
@@ -655,7 +615,7 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Me a Message
                       </h5>
                     </div>
                     <div>
@@ -711,9 +671,9 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                        <li><span class="ion-email"></span> contact@example.com</li>
+                        <li><span class="ion-ios-location"></span> Nairobi, Kenya</li>
+                        <li><span class="ion-ios-telephone"></span> (+254) 703-107-408</li>
+                        <li><span class="ion-email"></span> mozzeago(at)gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -741,7 +701,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Moses Asiago</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
@@ -749,7 +709,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://mozeago.github.io/">Moses Asiago</a>
             </div>
           </div>
         </div>
