--- a/index.html
+++ b/index.html
@@ -326,16 +326,16 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/hakiki411.jpg" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/hakiki411.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Loreda Cuno Nere</h2>
+                      <h2 class="w-title">Hakiki411 Android App</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">Java Android</span> / <span class="w-date">March 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
