added Compho africa android app to portfolio

--- a/index.html
+++ b/index.html
@@ -302,16 +302,16 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/compho-africa-screen-cat-marks.jpg" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/screen-classes.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Lorem impsum dolor</h2>
+                      <h2 class="w-title">Compho Africa Android App</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">Java Android</span> / <span class="w-date">27 Oct. 2016</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
